# wofa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
darkknot/: __init__.py  darkknot.py  plot.py  redknot.py
wofa/: __init__.py  darkknot.py
