[project]
name = "darkknot"
version = "0.2.1"
description = "Flex-Knot reconstruction of dark energy w(a), for use with Cobaya"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"
dependencies = ["numpy", "cobaya", "flexknot@git+ssh://github.com/Ormorod/flexknot@main"]

[project.urls]
repository = "https://github.com/Ormorod/darkknot"

[project.optional-dependencies]
dev = ["black", "pre-commit"]
