[project]
name = "darkknot"
dynamic = ["version"]
description = "Flex-Knot reconstruction of dark energy w(a), for use with Cobaya"
authors = [{name="Adam Neil Ormondroyd", email="Adam.Ormondroyd@gmail.com"}]
readme = "README.md"
dependencies = ["numpy", "matplotlib", "cobaya", "anesthetic", "fgivenx", "flexknot@git+https://github.com/adamormondroyd/flexknot@main"]

[project.urls]
repository = "https://github.com/adamormondroyd/darkknot"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[build-system]
requires = ["setuptools_scm>=8"]

[tool.setuptools_scm]
version_file = "darkknot/_version.py"
